--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lira Kurdi - Financial Freedom</title>
+    <title>Lira Kurdi</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
@@ -16,43 +16,35 @@
         <div id="home" class="page">
             <header class="header py-4 text-center">
                 <img src="images/logo.png" alt="Lira Kurdi Logo" class="logo mb-3">
-                <h1 class="display-4">Lira Kurdi</h1>
-                <p class="slogan">Financial Freedom for Mesopotamia</p>
+                <h1 class="display-5">Lira Kurdi</h1>
             </header>
             <main class="container-fluid">
-                <section class="welcome py-5">
+                <section class="welcome py-4">
                     <div class="welcome-card mx-auto">
-                        <h2 class="card-title">Welcome, <span id="userName">Guest</span>!</h2>
+                        <h2 class="card-title">Welcome, <span id="userName">Guest</span></h2>
                         <p><strong>User ID:</strong> <span id="userId">N/A</span></p>
-                        <div class="balance-list">
-                            <div class="balance-item">
-                                <img src="images/logo.png" alt="LKURD" class="currency-logo">
-                                <span>LKURD</span>
-                                <span id="lkurdBalance">100.00 LKURD - ₺100.00</span>
-                            </div>
-                            <div class="balance-item">
-                                <i class="bi bi-currency-dollar"></i>
-                                <span>USDT</span>
-                                <span id="usdtBalance">0.00 USDT - ₺<span>Loading...</span></span>
+                        <div class="balance-selector">
+                            <select id="currencySelect" class="form-select">
+                                <option value="LKURD">LKURD</option>
+                                <option value="USDT">USDT</option>
+                                <option value="TRY">TRY</option>
+                            </select>
+                            <div class="balance-item mt-2">
+                                <img src="images/logo.png" alt="Currency" class="currency-logo" id="currencyLogo">
+                                <span id="currencySymbol">LKURD</span>
+                                <span id="balance">0.00 LKURD - ₺0.00</span>
                             </div>
                         </div>
                     </div>
                 </section>
-                <section class="farming py-5 text-center">
-                    <h2 class="section-title">Earn $LKURD with Farming</h2>
-                    <div class="farming-card mx-auto">
-                        <p><strong>Next Claim:</strong> <span id="nextClaim">Calculating...</span></p>
-                        <button class="btn btn-primary w-100" id="claimButton" disabled>Claim 8 $LKURD</button>
+                <section class="stars py-4 text-center">
+                    <div class="stars-card mx-auto">
+                        <h3>Stars Earnings</h3>
+                        <p>Total: 77 Stars</p>
+                        <p>30% (23.1 Stars) to content creators, distributed every 5,000 Stars.</p>
                     </div>
                 </section>
-                <section class="distribution py-5">
-                    <h2 class="section-title">Distribution of Earnings</h2>
-                    <div class="distribution-card mx-auto">
-                        <canvas id="distributionChart"></canvas>
-                        <p class="mt-3">30% to content creators, distributed every 5,000 Stars.</p>
-                    </div>
-                </section>
-                <section class="suggested py-5">
+                <section class="suggested py-4">
                     <h2 class="section-title">Suggested for You</h2>
                     <div class="suggested-slider">
                         <div class="suggested-card">
@@ -63,45 +55,41 @@
                             <h3>Join Casino</h3>
                             <p>Win big with Lira Kurdi Casino!</p>
                         </div>
-                        <div class="suggested-card">
-                            <h3>Play Age of Web</h3>
-                            <p>Conquer the pixel world!</p>
-                        </div>
                     </div>
                 </section>
-                <section class="apps py-5">
+                <section class="apps py-4">
                     <h2 class="section-title">Our Apps</h2>
-                    <div class="row g-4">
+                    <div class="row g-3">
                         <div class="col-12 col-md-6 col-lg-3">
                             <div class="app-card">
-                                <div class="app-logo-placeholder">Hez</div>
+                                <img src="images/logo.png" alt="Hez Dating" class="app-logo">
                                 <h5 class="card-title">Hez Dating</h5>
                                 <p class="card-text">Find your match!</p>
-                                <button class="btn btn-primary">Coming Soon</button>
+                                <button class="btn btn-outline-primary">Coming Soon</button>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-lg-3">
                             <div class="app-card">
-                                <div class="app-logo-placeholder">Kevok</div>
+                                <img src="images/logo.png" alt="Kevok" class="app-logo">
                                 <h5 class="card-title">Kevok</h5>
                                 <p class="card-text">Moto courier service.</p>
-                                <button class="btn btn-primary">Coming Soon</button>
+                                <button class="btn btn-outline-primary">Coming Soon</button>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-lg-3">
                             <div class="app-card">
-                                <div class="app-logo-placeholder">Copy</div>
+                                <img src="images/logo.png" alt="Copy Trading" class="app-logo">
                                 <h5 class="card-title">Copy Trading</h5>
                                 <p class="card-text">Follow top traders.</p>
-                                <button class="btn btn-primary">Coming Soon</button>
+                                <button class="btn btn-outline-primary">Coming Soon</button>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-lg-3">
                             <div class="app-card">
-                                <div class="app-logo-placeholder">Air</div>
+                                <img src="images/logo.png" alt="Airdrops" class="app-logo">
                                 <h5 class="card-title">Airdrops</h5>
                                 <p class="card-text">Earn free tokens!</p>
-                                <button class="btn btn-primary">Coming Soon</button>
+                                <button class="btn btn-outline-primary">Coming Soon</button>
                             </div>
                         </div>
                     </div>
@@ -109,30 +97,30 @@
             </main>
         </div>
         <div id="investment" class="page d-none">
-            <main class="container-fluid py-5">
+            <main class="container-fluid py-4">
                 <h2 class="section-title">Investment Opportunities</h2>
-                <div class="row g-4">
+                <div class="row g-3">
                     <div class="col-12 col-md-6">
                         <div class="investment-card">
                             <h3>Buy & Sell $LKURD</h3>
                             <p>Trade at 1 TL per token.</p>
-                            <a href="https://t.me/LiraKurdiSupport" target="_blank" class="btn btn-primary">Trade Now</a>
+                            <a href="https://t.me/LiraKurdiSupport" target="_blank" class="btn btn-outline-primary">Trade Now</a>
                         </div>
                     </div>
                     <div class="col-12 col-md-6">
                         <div class="investment-card">
                             <h3>BTC Investment</h3>
                             <p>Convert BTC to $LKURD.</p>
-                            <a href="https://t.me/LiraKurdiSupport" target="_blank" class="btn btn-primary">Invest Now</a>
+                            <a href="https://t.me/LiraKurdiSupport" target="_blank" class="btn btn-outline-primary">Invest Now</a>
                         </div>
                     </div>
                 </div>
             </main>
         </div>
         <div id="game" class="page d-none">
-            <main class="container-fluid py-5">
+            <main class="container-fluid py-4">
                 <h2 class="section-title">Our Games</h2>
-                <div class="row g-4">
+                <div class="row g-3">
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="game-card">
                             <img src="images/gamearkaplan.jpg" alt="Age of Web" class="card-img-top">
@@ -142,7 +130,7 @@
                                     <h5 class="card-title mb-0">Age of Web</h5>
                                 </div>
                                 <p class="card-text">Type: Action</p>
-                                <a href="gameofweb/index.html" class="btn btn-primary">Play Now</a>
+                                <a href="gameofweb/index.html" class="btn btn-outline-primary">Play Now</a>
                             </div>
                         </div>
                     </div>
@@ -155,7 +143,7 @@
                                     <h5 class="card-title mb-0">Lira Kurdi Casino</h5>
                                 </div>
                                 <p class="card-text">Type: Casino</p>
-                                <a href="casino/index.html" class="btn btn-primary">Play Now</a>
+                                <a href="casino/index.html" class="btn btn-outline-primary">Play Now</a>
                             </div>
                         </div>
                     </div>
@@ -163,7 +151,7 @@
             </main>
         </div>
         <div id="profile" class="page d-none">
-            <main class="container-fluid py-5">
+            <main class="container-fluid py-4">
                 <div class="wallet-card mx-auto">
                     <div class="card-body">
                         <h5 class="card-title">Your Wallet</h5>
@@ -176,29 +164,29 @@
                             <p><strong>Premium:</strong> <span id="premium">No</span></p>
                             <p><strong>Allows PM:</strong> <span id="allowsPm">N/A</span></p>
                         </div>
-                        <button class="btn btn-primary w-100 mb-4" onclick="connectWallet()">Connect Telegram Wallet</button>
-                        <div class="balance-list">
-                            <div class="balance-item">
-                                <img src="images/logo.png" alt="LKURD" class="currency-logo">
-                                <span>LKURD</span>
-                                <span id="lkurdBalanceProfile">100.00 LKURD - ₺100.00</span>
-                            </div>
-                            <div class="balance-item">
-                                <i class="bi bi-currency-dollar"></i>
-                                <span>USDT</span>
-                                <span id="usdtBalanceProfile">0.00 USDT - ₺<span>Loading...</span></span>
+                        <button class="btn btn-outline-primary w-100 mb-3" onclick="connectWallet()">Connect Telegram Wallet</button>
+                        <div class="balance-selector">
+                            <select id="currencySelectProfile" class="form-select">
+                                <option value="LKURD">LKURD</option>
+                                <option value="USDT">USDT</option>
+                                <option value="TRY">TRY</option>
+                            </select>
+                            <div class="balance-item mt-2">
+                                <img src="images/logo.png" alt="Currency" class="currency-logo" id="currencyLogoProfile">
+                                <span id="currencySymbolProfile">LKURD</span>
+                                <span id="balanceProfile">0.00 LKURD - ₺0.00</span>
                             </div>
                         </div>
-                        <div class="top-up-card mt-4">
+                        <div class="top-up-card mt-3">
                             <h5 class="card-title">Top Up $LKURD</h5>
-                            <p class="card-text">1 $LKURD = 1 TL (Limited Offer)</p>
+                            <p class="card-text">1 $LKURD = 1 TL</p>
                             <div class="input-group mb-3">
                                 <input type="number" class="form-control" id="topUpAmount" placeholder="Enter amount" min="1">
                                 <span class="input-group-text">LKURD</span>
                             </div>
-                            <button class="btn btn-primary w-100" onclick="topUpBalance()">Buy with Telegram Stars</button>
+                            <button class="btn btn-outline-primary w-100" onclick="topUpBalance()">Buy with Telegram Stars</button>
                         </div>
-                        <div class="transaction-card mt-4">
+                        <div class="transaction-card mt-3">
                             <h5 class="card-title">Transaction History</h5>
                             <ul id="transactionList" class="list-group">
                                 <li class="list-group-item">No transactions yet.</li>
@@ -226,8 +214,8 @@
                 </ul>
             </div>
         </nav>
-        <footer class="footer py-4 text-center">
-            <div class="row g-3">
+        <footer class="footer py-3 text-center">
+            <div class="row g-2">
                 <div class="col-6 col-md-3">
                     <a href="#" class="footer-link">About</a>
                 </div>
@@ -241,11 +229,10 @@
                     <a href="#" class="footer-link">Work with Us</a>
                 </div>
             </div>
-            <p class="mt-3 text-muted">© 2025 Lira Kurdi. All rights reserved.</p>
+            <p class="mt-2 text-muted">© 2025 Lira Kurdi</p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.4/dist/chart.umd.min.js"></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="script.js"></script>
 </body>
