--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     </div>
     <div id="main-content" class="d-none">
         <div id="home" class="page">
-            <header class="header py-4 text-center">
-                <img src="images/logo.png" alt="Lira Kurdi Logo" class="logo mb-3">
-                <h1 class="display-5">Lira Kurdi</h1>
+            <header class="header py-3">
+                <div class="container-fluid d-flex align-items-center">
+                    <h2 class="greeting mb-0">Merhaba, <span id="userName">Guest</span></h2>
+                </div>
             </header>
             <main class="container-fluid">
-                <section class="welcome py-4">
+                <section class="welcome py-3">
                     <div class="welcome-card mx-auto">
-                        <h2 class="card-title">Welcome, <span id="userName">Guest</span></h2>
                         <p><strong>User ID:</strong> <span id="userId">N/A</span></p>
                         <div class="balance-selector">
                             <select id="currencySelect" class="form-select">
@@ -37,14 +37,14 @@
                         </div>
                     </div>
                 </section>
-                <section class="stars py-4 text-center">
+                <section class="stars py-3 text-center">
                     <div class="stars-card mx-auto">
                         <h3>Stars Earnings</h3>
                         <p>Total: 77 Stars</p>
                         <p>30% (23.1 Stars) to content creators, distributed every 5,000 Stars.</p>
                     </div>
                 </section>
-                <section class="suggested py-4">
+                <section class="suggested py-3">
                     <h2 class="section-title">Suggested for You</h2>
                     <div class="suggested-slider">
                         <div class="suggested-card">
@@ -57,9 +57,9 @@
                         </div>
                     </div>
                 </section>
-                <section class="apps py-4">
+                <section class="apps py-3">
                     <h2 class="section-title">Our Apps</h2>
-                    <div class="row g-3">
+                    <div class="row g-2">
                         <div class="col-12 col-md-6 col-lg-3">
                             <div class="app-card">
                                 <img src="images/logo.png" alt="Hez Dating" class="app-logo">
@@ -97,9 +97,9 @@
             </main>
         </div>
         <div id="investment" class="page d-none">
-            <main class="container-fluid py-4">
+            <main class="container-fluid py-3">
                 <h2 class="section-title">Investment Opportunities</h2>
-                <div class="row g-3">
+                <div class="row g-2">
                     <div class="col-12 col-md-6">
                         <div class="investment-card">
                             <h3>Buy & Sell $LKURD</h3>
@@ -118,9 +118,9 @@
             </main>
         </div>
         <div id="game" class="page d-none">
-            <main class="container-fluid py-4">
+            <main class="container-fluid py-3">
                 <h2 class="section-title">Our Games</h2>
-                <div class="row g-3">
+                <div class="row g-2">
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="game-card">
                             <img src="images/gamearkaplan.jpg" alt="Age of Web" class="card-img-top">
@@ -151,7 +151,7 @@
             </main>
         </div>
         <div id="profile" class="page d-none">
-            <main class="container-fluid py-4">
+            <main class="container-fluid py-3">
                 <div class="wallet-card mx-auto">
                     <div class="card-body">
                         <h5 class="card-title">Your Wallet</h5>
@@ -161,9 +161,10 @@
                             <p><strong>Username:</strong> <a href="#" id="telegramLink" target="_blank">@Guest</a></p>
                             <p><strong>User ID:</strong> <span id="userIdProfile">N/A</span></p>
                             <p><strong>Language:</strong> <span id="language">N/A</span></p>
-                            <p><strong>Premium:</strong> <span id="premium">No</span></p>
+                            <p><strong>Premium:</strong> <span id="premiumStatus">No</span></p>
                             <p><strong>Allows PM:</strong> <span id="allowsPm">N/A</span></p>
                         </div>
+                        <button class="btn btn-outline-primary w-100 mb-3" onclick="subscribePremium()">Get Premium</button>
                         <button class="btn btn-outline-primary w-100 mb-3" onclick="connectWallet()">Connect Telegram Wallet</button>
                         <div class="balance-selector">
                             <select id="currencySelectProfile" class="form-select">
@@ -203,37 +204,35 @@
                         <a class="nav-link active" href="#" onclick="showPage('home')"><i class="bi bi-house"></i> Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="showPage('investment')"><i class="bi bi-graph-up"></i> Investment</a>
+                        <a class="nav-link" href="#" onclick="showPage('investment')"><i class="bi bi-graph-up"></i> Inv.</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" onclick="showPage('game')"><i class="bi bi-joystick"></i> Game</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="showPage('profile')"><i class="bi bi-person"></i> Profile</a>
+                        <a class="nav-link" href="#" onclick="showPage('profile')"><i class="bi bi-person"></i> Prof.</a>
                     </li>
                 </ul>
             </div>
         </nav>
-        <footer class="footer py-3 text-center">
-            <div class="row g-2">
-                <div class="col-6 col-md-3">
-                    <a href="#" class="footer-link">About</a>
-                </div>
-                <div class="col-6 col-md-3">
-                    <a href="#" class="footer-link">Become a Content Creator</a>
-                </div>
-                <div class="col-6 col-md-3">
-                    <a href="#" class="footer-link">Partner with Us</a>
-                </div>
-                <div class="col-6 col-md-3">
-                    <a href="#" class="footer-link">Work with Us</a>
-                </div>
+        <footer class="footer py-2 text-center">
+            <div class="social-icons mb-2">
+                <a href="https://t.me/LiraKurdiSupport" target="_blank" class="social-icon"><i class="bi bi-telegram"></i></a>
+                <a href="https://x.com/LiraKurdi" target="_blank" class="social-icon"><i class="bi bi-twitter-x"></i></a>
+                <a href="https://instagram.com/LiraKurdi" target="_blank" class="social-icon"><i class="bi bi-instagram"></i></a>
             </div>
-            <p class="mt-2 text-muted">© 2025 Lira Kurdi</p>
+            <div class="footer-links">
+                <a href="#" class="footer-link">About</a>
+                <a href="#" class="footer-link">Content Creator</a>
+                <a href="#" class="footer-link">Partner</a>
+                <a href="#" class="footer-link">Work with Us</a>
+            </div>
+            <p class="copyright mt-2">© 2025 Lira Kurdi</p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="script.js"></script>
+    <script src="premium.js"></script>
 </body>
 </html>
