--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div id="home" class="page">
             <header class="header py-3">
                 <div class="container-fluid d-flex align-items-center">
-                    <h2 class="greeting mb-0">Merhaba, <span id="userName">Guest</span></h2>
+                    <h2 class="greeting mb-0">Merhaba, Guest</h2>
                 </div>
             </header>
             <main class="container-fluid">
                 <section class="welcome py-3">
                     <div class="welcome-card mx-auto">
-                        <p><strong>User ID:</strong> <span id="userId">N/A</span></p>
+                        <p><strong>User ID:</strong> N/A</p>
                         <div class="balance-selector">
                             <select id="currencySelect" class="form-select">
                                 <option value="LKURD">LKURD</option>
@@ -42,6 +42,32 @@
                         <h3>Stars Earnings</h3>
                         <p>Total: 77 Stars</p>
                         <p>30% (23.1 Stars) to content creators, distributed every 5,000 Stars.</p>
+                    </div>
+                </section>
+                <section class="tribute py-3">
+                    <h2 class="section-title">Support Lira Kurdi</h2>
+                    <div class="row g-2">
+                        <div class="col-12 col-md-4">
+                            <div class="tribute-card">
+                                <h5>Premium Abonelik</h5>
+                                <p>Exclusive content access.</p>
+                                <a href="https://t.me/tribute/app?startapp=suJQ" target="_blank" class="btn btn-outline-primary">Subscribe</a>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <div class="tribute-card">
+                                <h5>DR Rıza Nu Kitabı</h5>
+                                <p>Purchase the exclusive book.</p>
+                                <a href="https://t.me/tribute/app?startapp=pgXq" target="_blank" class="btn btn-outline-primary">Buy Now</a>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <div class="tribute-card">
+                                <h5>Lira Kurdi Bağış</h5>
+                                <p>Support our mission.</p>
+                                <a href="https://t.me/tribute/app?startapp=dqji" target="_blank" class="btn btn-outline-primary">Donate</a>
+                            </div>
+                        </div>
                     </div>
                 </section>
                 <section class="suggested py-3">
@@ -64,32 +90,79 @@
                             <div class="app-card">
                                 <img src="images/logo.png" alt="Hez Dating" class="app-logo">
                                 <h5 class="card-title">Hez Dating</h5>
+                                <span class="category-tag premium">Premium</span>
+                                <span class="category-tag">Sosyal</span>
                                 <p class="card-text">Find your match!</p>
-                                <button class="btn btn-outline-primary">Coming Soon</button>
+                                <button class="btn btn-outline-primary">Aç</button>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-lg-3">
                             <div class="app-card">
                                 <img src="images/logo.png" alt="Kevok" class="app-logo">
+                                <span class="category-tag">Yaşam</span>
                                 <h5 class="card-title">Kevok</h5>
                                 <p class="card-text">Moto courier service.</p>
-                                <button class="btn btn-outline-primary">Coming Soon</button>
+                                <button class="btn btn-outline-primary">Aç</button>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-lg-3">
                             <div class="app-card">
                                 <img src="images/logo.png" alt="Copy Trading" class="app-logo">
+                                <span class="category-tag">Finans</span>
                                 <h5 class="card-title">Copy Trading</h5>
                                 <p class="card-text">Follow top traders.</p>
-                                <button class="btn btn-outline-primary">Coming Soon</button>
+                                <button class="btn btn-outline-primary">Aç</button>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-lg-3">
                             <div class="app-card">
                                 <img src="images/logo.png" alt="Airdrops" class="app-logo">
+                                <span class="category-tag">Finans</span>
                                 <h5 class="card-title">Airdrops</h5>
                                 <p class="card-text">Earn free tokens!</p>
-                                <button class="btn btn-outline-primary">Coming Soon</button>
+                                <button class="btn btn-outline-primary">Aç</button>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-3">
+                            <div class="app-card">
+                                <img src="images/logo.png" alt="Kurdi TV" class="app-logo">
+                                <span class="category-tag">Eğlence</span>
+                                <h5 class="card-title">Kurdi TV</h5>
+                                <p class="card-text">Stream like Netflix!</p>
+                                <button class="btn btn-outline-primary">Aç</button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="games py-3">
+                    <h2 class="section-title">Our Games</h2>
+                    <div class="row g-2">
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="game-card">
+                                <img src="images/gamearkaplan.jpg" alt="Age of Web" class="card-img-top">
+                                <div class="card-body">
+                                    <div class="d-flex align-items-center mb-2">
+                                        <img src="images/gamelogo.png" alt="Game Logo" class="game-logo me-2">
+                                        <h5 class="card-title mb-0">Age of Web</h5>
+                                    </div>
+                                    <span class="category-tag">Aksiyon</span>
+                                    <p class="card-text">Type: Action</p>
+                                    <a href="gameofweb/index.html" class="btn btn-outline-primary">Oyna</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 col-lg-4">
+                            <div class="game-card">
+                                <img src="images/casinoarkaplan.jpg" alt="Casino" class="card-img-top">
+                                <div class="card-body">
+                                    <div class="d-flex align-items-center mb-2">
+                                        <img src="images/casinologo.png" alt="Casino Logo" class="game-logo me-2">
+                                        <h5 class="card-title mb-0">Lira Kurdi Casino</h5>
+                                    </div>
+                                    <span class="category-tag">Casino</span>
+                                    <p class="card-text">Type: Casino</p>
+                                    <a href="casino/index.html" class="btn btn-outline-primary">Oyna</a>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -117,39 +190,6 @@
                 </div>
             </main>
         </div>
-        <div id="game" class="page d-none">
-            <main class="container-fluid py-3">
-                <h2 class="section-title">Our Games</h2>
-                <div class="row g-2">
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="game-card">
-                            <img src="images/gamearkaplan.jpg" alt="Age of Web" class="card-img-top">
-                            <div class="card-body">
-                                <div class="d-flex align-items-center mb-2">
-                                    <img src="images/gamelogo.png" alt="Game Logo" class="game-logo me-2">
-                                    <h5 class="card-title mb-0">Age of Web</h5>
-                                </div>
-                                <p class="card-text">Type: Action</p>
-                                <a href="gameofweb/index.html" class="btn btn-outline-primary">Play Now</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-4">
-                        <div class="game-card">
-                            <img src="images/casinoarkaplan.jpg" alt="Casino" class="card-img-top">
-                            <div class="card-body">
-                                <div class="d-flex align-items-center mb-2">
-                                    <img src="images/casinologo.png" alt="Casino Logo" class="game-logo me-2">
-                                    <h5 class="card-title mb-0">Lira Kurdi Casino</h5>
-                                </div>
-                                <p class="card-text">Type: Casino</p>
-                                <a href="casino/index.html" class="btn btn-outline-primary">Play Now</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </main>
-        </div>
         <div id="profile" class="page d-none">
             <main class="container-fluid py-3">
                 <div class="wallet-card mx-auto">
@@ -165,7 +205,6 @@
                             <p><strong>Allows PM:</strong> <span id="allowsPm">N/A</span></p>
                         </div>
                         <button class="btn btn-outline-primary w-100 mb-3" onclick="subscribePremium()">Get Premium</button>
-                        <button class="btn btn-outline-primary w-100 mb-3" onclick="connectWallet()">Connect Telegram Wallet</button>
                         <div class="balance-selector">
                             <select id="currencySelectProfile" class="form-select">
                                 <option value="LKURD">LKURD</option>
