--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div id="intro" class="intro">
         <img src="images/logo.png" alt="Lira Kurdi Logo" class="intro-logo">
     </div>
+    <div id="transition" class="transition d-none">
+        <img src="images/casinologo.png" alt="Casino Logo" class="transition-logo">
+    </div>
     <div id="main-content" class="d-none">
         <div id="home" class="page">
             <header class="header py-3">
@@ -93,7 +96,7 @@
                                 <span class="category-tag premium">Premium</span>
                                 <span class="category-tag">Sosyal</span>
                                 <p class="card-text">Find your match!</p>
-                                <button class="btn btn-outline-primary">Aç</button>
+                                <button class="btn btn-outline-primary" onclick="checkPremium('Hez Dating')">Aç</button>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 col-lg-3">
@@ -161,7 +164,7 @@
                                     </div>
                                     <span class="category-tag">Casino</span>
                                     <p class="card-text">Type: Casino</p>
-                                    <a href="casino/index.html" class="btn btn-outline-primary">Oyna</a>
+                                    <a href="#" onclick="transitionPage('casino/index.html')" class="btn btn-outline-primary">Oyna</a>
                                 </div>
                             </div>
                         </div>
