--- a/casino/index.html
+++ b/casino/index.html
@@ -12,7 +12,7 @@
     <div id="intro" class="intro">
         <img src="../images/casinologo.png" alt="Casino Logo" class="intro-logo">
     </div>
-    <div id="login" class="d-none">
+    <div id="login" class="login d-none">
         <div class="login-card mx-auto">
             <h3 class="text-center">Enter Your ID</h3>
             <div class="input-group mb-3">
@@ -21,7 +21,7 @@
             <button class="btn btn-outline-primary w-100" onclick="login()">Login</button>
         </div>
     </div>
-    <div id="main-content" class="d-none">
+    <div id="main-content" class="main-content d-none">
         <header class="header py-3 text-center">
             <img src="../images/casinologo.png" alt="Casino Logo" class="logo mb-2">
             <h1 class="display-5">Lira Kurdi Casino</h1>
