--- a/index.html
+++ b/index.html
@@ -3,170 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lira Kurdi</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+    <title>Telegram Forms</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-    <div id="intro" class="intro">
-        <img src="images/logo.png" alt="Lira Kurdi Logo" class="intro-logo">
-    </div>
-    <div id="main-content" class="d-none">
-        <header class="header py-3">
-            <div class="container-fluid d-flex align-items-center justify-content-between">
-                <img src="images/logo.png" alt="Lira Kurdi Logo" class="header-logo">
-                <a href="#" onclick="showPage('profile')" class="profile-icon"><i class="bi bi-person-circle"></i></a>
-            </div>
-        </header>
-        <main class="container-fluid">
-            <section class="overview py-3">
-                <div class="overview-card mx-auto">
-                    <h3 class="text-center">Lira Kurdi Economy</h3>
-                    <p>Total $LKURD: 1,000,000</p>
-                    <p>Balance: 77 Stars, 0.072 TON</p>
-                    <canvas id="balanceChart" height="200"></canvas>
-                    <p class="text-center mt-2">Distribution: 60% Lira Kurdi, 30% Devs/Community, 10% Investors</p>
-                </div>
-            </section>
-            <section class="features py-3">
-                <h2 class="section-title">Banking Features</h2>
-                <div class="row g-2">
-                    <div class="col-12 col-md-6">
-                        <div class="feature-card">
-                            <i class="bi bi-arrow-left-right"></i>
-                            <h5>Buy/Sell $LKURD</h5>
-                            <p>Trade at 1 TL per token.</p>
-                            <button class="btn btn-telegram" onclick="trade()">Trade Now</button>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <div class="feature-card">
-                            <i class="bi bi-send"></i>
-                            <h5>Transfer</h5>
-                            <p>Send $LKURD to others.</p>
-                            <button class="btn btn-telegram disabled">Coming Soon</button>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <div class=feature-card>
-                            <i class="bi bi-piggy-bank"></i>
-                            <h5>Staking</h5>
-                            <p>Earn rewards on $LKURD.</p>
-                            <button class="btn btn-telegram disabled">Coming Soon</button>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <div class="feature-card">
-                            <i class="bi bi-credit-card"></i>
-                            <h5>Loans</h5>
-                            <p>Borrow against $LKURD.</p>
-                            <button class="btn btn-telegram disabled">Coming Soon</button>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="community py-3">
-                <h2 class="section-title">Join Our Community</h2>
-                <div class="row g-2">
-                    <div class="col-12 col-md-6">
-                        <div class="community-card">
-                            <i class="bi bi-telegram"></i>
-                            <h5>Lira Kurdi Channel</h5>
-                            <p>Subscribe to @LiraKurdi for updates.</p>
-                            <a href="https://t.me/LiraKurdi" target="_blank" class="btn btn-telegram">Join Now</a>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6">
-                        <div class="community-card">
-                            <i class="bi bi-chat-dots"></i>
-                            <h5>Lira Kurdi Chat</h5>
-                            <p>Connect with our community.</p>
-                            <a href="https://t.me/LiraKurdiChat" target="_blank" class="btn btn-telegram">Join Chat</a>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <nav class="navbar fixed-bottom navbar-light">
-            <div class="container-fluid">
-                <ul class="nav nav-pills nav-fill w-100">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#" onclick="showPage('home')"><i class="bi bi-house"></i> Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="showPage('support')"><i class="bi bi-question-circle"></i> Supp.</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="showPage('profile')"><i class="bi bi-person"></i> Prof.</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <footer class="footer py-2 text-center">
-            <div class="social-icons mb-2">
-                <a href="https://t.me/LiraKurdiSupport" target="_blank" class="social-icon"><i class="bi bi-telegram"></i></a>
-                <a href="https://x.com/LiraKurdi" target="_blank" class="social-icon"><i class="bi bi-twitter-x"></i></a>
-                <a href="https://instagram.com/LiraKurdi" target="_blank" class="social-icon"><i class="bi bi-instagram"></i></a>
-            </div>
-            <p class="copyright mt-2">© 2025 Lira Kurdi</p>
-        </footer>
-    </div>
-    <div id="support" class="page d-none">
-        <main class="container-fluid py-3">
-            <h2 class="section-title">Support</h2>
-            <div class="support-card mx-auto">
-                <i class="bi bi-headset"></i>
-                <h5>Contact Us</h5>
-                <p>Reach out via @LiraKurdiSupport.</p>
-                <a href="https://t.me/LiraKurdiSupport" target="_blank" class="btn btn-telegram">Get Help</a>
-            </div>
-            <div class="support-card mx-auto mt-3">
-                <i class="bi bi-question-circle"></i>
-                <h5>FAQ</h5>
-                <p>Common questions about $LKURD.</p>
-                <button class="btn btn-telegram">View FAQ</button>
-            </div>
-        </main>
-    </div>
-    <div id="profile" class="page d-none">
-        <main class="container-fluid py-3">
-            <div class="wallet-card mx-auto">
-                <div class="card-body">
-                    <h5 class="card-title">Your Wallet</h5>
-                    <div class="profile-info">
-                        <p><strong>Username:</strong> <a href="#" id="telegramLink" target="_blank">@Guest</a></p>
-                        <p><strong>User ID:</strong> <span id="userIdProfile">N/A</span></p>
-                        <p><strong>Premium:</strong> <span id="premiumStatus">No</span></p>
-                        <p><strong>Language:</strong> <span id="language">N/A</span></p>
-                        <p><strong>Wallet:</strong> <span id="walletAddress">Not Connected</span></p>
-                    </div>
-                    <button class="btn btn-telegram w-100 mb-3" onclick="connectWallet()">Connect TON Wallet</button>
-                    <button class="btn btn-telegram w-100 mb-3" onclick="subscribePremium()">Get Premium</button>
-                    <div class="balance-selector">
-                        <h6>Balances</h6>
-                        <p>Stars: <span id="starsBalance">0</span></p>
-                        <p>TON: <span id="tonBalance">0</span></p>
-                        <p>$LKURD: <span id="lkurdBalance">0</span></p>
-                    </div>
-                    <div class="transaction-card mt-3">
-                        <h5 class="card-title">Transaction History</h5>
-                        <ul id="transactionList" class="list-group">
-                            <li class="list-group-item">No transactions yet.</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </main>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://www.unpkg.com/@tonconnect/sdk@3.0.0-beta.1/dist/tonconnect-sdk.min.js"></script>
-    <script src="https://www.unpkg.com/qrcode@1.5.1/qrcode.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-database.js"></script>
-    <script src="premium.js"></script>
+    <header>
+        <img src="images/logo.png" alt="Telegram Forms Logo" class="logo">
+        <h1>Telegram Forms</h1>
+    </header>
+    <main>
+        <section id="form-builder">
+            <h2>Create a New Form</h2>
+            <input type="text" id="form-title" placeholder="Enter form title" required>
+            <div id="questions-container"></div>
+            <button id="add-question" class="telegram-button">Add Question</button>
+            <button id="save-form" class="telegram-button">Save & Share Form</button>
+        </section>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
