--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
             <h2>Create a New Form</h2>
             <input type="text" id="form-title" placeholder="Enter form title" required>
             <div id="questions-container"></div>
+            <select id="question-type">
+                <option value="multiple-choice">Multiple Choice</option>
+                <option value="dropdown">Dropdown</option>
+                <option value="paragraph">Paragraph</option>
+                <option value="date">Date</option>
+                <option value="short-answer">Short Answer</option>
+            </select>
             <button id="add-question" class="telegram-button">Add Question</button>
             <button id="save-form" class="telegram-button">Save & Share Form</button>
         </section>
